--- a/6final/s3_1/s1/platformio.ini
+++ b/6final/s3_1/s1/platformio.ini
@@ -12,6 +12,4 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = 
-	feilipu/FreeRTOS@^10.4.4-2
-	arduino-libraries/Servo@^1.1.8
+lib_deps = feilipu/FreeRTOS@^10.4.4-2
