--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,210 @@ p6/New folder/hw6_q3_d/image.jpg
 p6/New folder/hw6_q3_d/video.mp4
 p6/s3/2/main.ino
 p6/s3/2/safety_robot.ino
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rtwtypes.h
+p7/ghanbari/1608802589_805__emb_ex_n7_g3.zip
+p7/ghanbari/hw07.pdf
+p7/ghanbari/hw7_q3_a/hw7_q3_a.slx
+p7/ghanbari/hw7_q3_a/img1.jpg
+p7/ghanbari/hw7_q3_a/img2.jpg
+p7/ghanbari/hw7_q3_b/hw7_q3_b.slx
+p7/ghanbari/hw7_q3_b/hw7_q3_b.slxc
+p7/ghanbari/hw7_q3_b/img1.jpg
+p7/ghanbari/hw7_q3_b/img2.jpg
+p7/ghanbari/hw7_q3_b/img3.jpg
+p7/ghanbari/hw7_q3_b/input.mat
+p7/ghanbari/hw7_q3_b/input.mp3
+p7/ghanbari/hw7_q3_b/output.wav
+p7/ghanbari/hw7_q3_b/slprj/sim/varcache/hw7_q3_b/checksumOfCache.mat
+p7/ghanbari/hw7_q3_b/slprj/sim/varcache/hw7_q3_b/tmwinternal/simulink_cache.xml
+p7/ghanbari/hw7_q3_b/slprj/sim/varcache/hw7_q3_b/varInfo.mat
+p7/ghanbari/hw7_q3_c/hw7_q3_c.pdsprj
+p7/ghanbari/hw7_q3_c/hw7_q3_c.slx
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/abi.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/arduinoAVRScheduler.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/build_exception.mat
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/buildInfo.mat
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/CDC.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/codedescriptor.dmr
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/codeInfo.mat
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/codertarget_assembly_flags.mk
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/compileInfo.mat
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/defines.txt
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/ert_main.c
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/ert_main.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/HardwareSerial.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/HardwareSerial0.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/HardwareSerial1.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/HardwareSerial2.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/HardwareSerial3.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hooks.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/HostLib_Multimedia.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hw7_q3_c.bat
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hw7_q3_c.c
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hw7_q3_c.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hw7_q3_c.h
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hw7_q3_c.mk
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/hw7_q3_c_data.c
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/io_wrappers.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/IPAddress.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/libcore.a
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/modelsources.txt
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/MW_ArduinoHWInit.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/MW_RebuildSrc_Core.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/MW_SerialRead.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/MW_SerialWrite.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/MW_target_hardware_resources.h
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/new.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/PluggableUSB.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/Print.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/rtmodel.h
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/rtw_proj.tmw
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/Stream.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/tmwinternal/simulink_cache.xml
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/Tone.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/USBCore.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/WInterrupts.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wiring.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wiring_analog.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wiring_digital.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wiring_pulse.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wiring_pulse.S.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wiring_shift.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/WMath.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/wrapper.mk
+p7/ghanbari/hw7_q3_c/hw7_q3_c_ert_rtw/WString.dep
+p7/ghanbari/hw7_q3_c/hw7_q3_c_pio/.vscode/extensions.json
+p7/ghanbari/hw7_q3_c/hw7_q3_c_pio/include/README
+p7/ghanbari/hw7_q3_c/hw7_q3_c_pio/lib/README
+p7/ghanbari/hw7_q3_c/hw7_q3_c_pio/platformio.ini
+p7/ghanbari/hw7_q3_c/hw7_q3_c_pio/src/main.cpp
+p7/ghanbari/hw7_q3_c/hw7_q3_c_pio/test/README
+p7/ghanbari/hw7_q3_c/img00.jpg
+p7/ghanbari/hw7_q3_c/img01.jpg
+p7/ghanbari/hw7_q3_c/img02.jpg
+p7/ghanbari/hw7_q3_c/img03.jpg
+p7/ghanbari/hw7_q3_c/img04.jpg
+p7/ghanbari/hw7_q3_c/img05.jpg
+p7/ghanbari/hw7_q3_c/img06.jpg
+p7/ghanbari/hw7_q3_c/img07.jpg
+p7/ghanbari/hw7_q3_c/img08.jpg
+p7/ghanbari/hw7_q3_c/img09.jpg
+p7/ghanbari/hw7_q3_c/img10.jpg
+p7/ghanbari/hw7_q3_c/img11.jpg
+p7/ghanbari/hw7_q3_c/input.mp3
+p7/ghanbari/hw7_q3_c/input1.mat
+p7/ghanbari/hw7_q3_c/output.wav
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O0_sketch_dec23a.ino.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O0_sketch_dec23a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O1_sketch_dec23a.ino.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O1_sketch_dec23a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O2_sketch_dec23a.ino.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O2_sketch_dec23a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O3_sketch_dec23a.ino.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/O3_sketch_dec23a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/Os_sketch_dec23a.ino.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/Os_sketch_dec23a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_c/sketch_dec23a/sketch_dec23a.back
+p7/ghanbari/hw7_q3_c/sketch_dec23a/sketch_dec23a.ino
+p7/ghanbari/hw7_q3_c/sketch_dec23a/sketch_dec23a.txt
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/buildInfo.mat
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/checksummap.mat
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/codertarget_assembly_flags.mk
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/compileInfo.mat
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rt_roundd.c
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rt_roundd.dep
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rt_roundd.h
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rtw_proj.tmw
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rtwshared.a
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rtwshared.bat
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rtwshared.mk
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/rtwtypeschksum.mat
+p7/ghanbari/hw7_q3_c/slprj/ert/_sharedutils/shared_file.dmr
+p7/ghanbari/hw7_q3_c/slprj/ert/hw7_q3_c/tmwinternal/binfo.mat
+p7/ghanbari/hw7_q3_c/slprj/ert/hw7_q3_c/tmwinternal/CompileInfo.xml
+p7/ghanbari/hw7_q3_c/slprj/ert/hw7_q3_c/tmwinternal/minfo.mat
+p7/ghanbari/hw7_q3_c/slprj/ert/hw7_q3_c/tmwinternal/scv
+p7/ghanbari/hw7_q3_c/slprj/ert/hw7_q3_c/tmwinternal/tr
+p7/ghanbari/hw7_q3_c/slprj/sim/varcache/hw7_q3_c/checksumOfCache.mat
+p7/ghanbari/hw7_q3_c/slprj/sim/varcache/hw7_q3_c/tmwinternal/simulink_cache.xml
+p7/ghanbari/hw7_q3_c/slprj/sim/varcache/hw7_q3_c/varInfo.mat
+p7/ghanbari/hw7_q3_c/slprj/sl_proj.tmw
+p7/ghanbari/hw7_q3_d/backup/hw7_q3_d.slx
+p7/ghanbari/hw7_q3_d/hw7_q3_d.slx
+p7/ghanbari/hw7_q3_d/hw7_q3_d.slxc
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/buildInfo.mat
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/codedescriptor.dmr
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/codeInfo.mat
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/codertarget_assembly_flags.mk
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/compileInfo.mat
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/defines.txt
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/ert_main.c
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/hw7_q3_d.bat
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/hw7_q3_d.c
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/hw7_q3_d.h
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/hw7_q3_d.mk
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/hw7_q3_d_data.c
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/modelsources.txt
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/MW_target_hardware_resources.h
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/rtmodel.h
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/rtw_proj.tmw
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/tmwinternal/simulink_cache.xml
+p7/ghanbari/hw7_q3_d/hw7_q3_d_ert_rtw/wrapper.mk
+p7/ghanbari/hw7_q3_d/img00.png
+p7/ghanbari/hw7_q3_d/img01.jpg
+p7/ghanbari/hw7_q3_d/img02.jpg
+p7/ghanbari/hw7_q3_d/img03.jpg
+p7/ghanbari/hw7_q3_d/img04.jpg
+p7/ghanbari/hw7_q3_d/img05.jpg
+p7/ghanbari/hw7_q3_d/img06.jpg
+p7/ghanbari/hw7_q3_d/img07.jpg
+p7/ghanbari/hw7_q3_d/input1.mat
+p7/ghanbari/hw7_q3_d/slprj/ert/_sharedutils/checksummap.mat
+p7/ghanbari/hw7_q3_d/slprj/ert/_sharedutils/rtwtypes.h
+p7/ghanbari/hw7_q3_d/slprj/ert/_sharedutils/rtwtypeschksum.mat
+p7/ghanbari/hw7_q3_d/slprj/ert/_sharedutils/shared_file.dmr
+p7/ghanbari/hw7_q3_d/slprj/ert/hw7_q3_d/tmwinternal/binfo.mat
+p7/ghanbari/hw7_q3_d/slprj/ert/hw7_q3_d/tmwinternal/CompileInfo.xml
+p7/ghanbari/hw7_q3_d/slprj/ert/hw7_q3_d/tmwinternal/minfo.mat
+p7/ghanbari/hw7_q3_d/slprj/ert/hw7_q3_d/tmwinternal/scv
+p7/ghanbari/hw7_q3_d/slprj/ert/hw7_q3_d/tmwinternal/tr
+p7/ghanbari/hw7_q3_d/slprj/modelrestore/ec7c55f2-1f0b-4036-bd36-6ee6d496d986/35CB9615D7FA06B5A78DB216FDD2FE19/hw7_q3_d.slx
+p7/ghanbari/hw7_q3_d/slprj/modelrestore/ec7c55f2-1f0b-4036-bd36-6ee6d496d986/35CB9615D7FA06B5A78DB216FDD2FE19/restoreData.mat
+p7/ghanbari/hw7_q3_d/slprj/sim/varcache/hw7_q3_d/checksumOfCache.mat
+p7/ghanbari/hw7_q3_d/slprj/sim/varcache/hw7_q3_d/tmwinternal/simulink_cache.xml
+p7/ghanbari/hw7_q3_d/slprj/sim/varcache/hw7_q3_d/varInfo.mat
+p7/ghanbari/hw7_q3_d/slprj/sl_proj.tmw
+p7/ghanbari/hw7_q3_e/hw7_q3_e.pdsprj
+p7/ghanbari/hw7_q3_e/img01.jpg
+p7/ghanbari/hw7_q3_e/img02.jpg
+p7/ghanbari/hw7_q3_e/img03.jpg
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O0_sketch_dec24a.ino.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O0_sketch_dec24a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O1_sketch_dec24a.ino.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O1_sketch_dec24a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O2_sketch_dec24a.ino.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O2_sketch_dec24a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O3_sketch_dec24a.ino.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/O3_sketch_dec24a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/Os_sketch_dec24a.ino.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/Os_sketch_dec24a.ino.with_bootloader.mega.hex
+p7/ghanbari/hw7_q3_e/sketch_dec24a/sketch_dec24a.ino
+p7/ghanbari/hw7_q3_e/sketch_dec24a/sketch_dec24a.txt
+p7/ghanbari/hw7_q3_e/src/buildInfo.mat
+p7/ghanbari/hw7_q3_e/src/codedescriptor.dmr
+p7/ghanbari/hw7_q3_e/src/codeInfo.mat
+p7/ghanbari/hw7_q3_e/src/codertarget_assembly_flags.mk
+p7/ghanbari/hw7_q3_e/src/compileInfo.mat
+p7/ghanbari/hw7_q3_e/src/defines.txt
+p7/ghanbari/hw7_q3_e/src/ert_main.c
+p7/ghanbari/hw7_q3_e/src/hw7_q3_d.bat
+p7/ghanbari/hw7_q3_e/src/hw7_q3_d.c
+p7/ghanbari/hw7_q3_e/src/hw7_q3_d.h
+p7/ghanbari/hw7_q3_e/src/hw7_q3_d.mk
+p7/ghanbari/hw7_q3_e/src/hw7_q3_d_data.c
+p7/ghanbari/hw7_q3_e/src/modelsources.txt
+p7/ghanbari/hw7_q3_e/src/MW_target_hardware_resources.h
+p7/ghanbari/hw7_q3_e/src/rtmodel.h
+p7/ghanbari/hw7_q3_e/src/rtw_proj.tmw
+p7/ghanbari/hw7_q3_e/src/tmwinternal/simulink_cache.xml
+p7/ghanbari/hw7_q3_e/src/wrapper.mk
