--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,181 @@ p7/ghanbari/hw7_q3_e/src/rtmodel.h
 p7/ghanbari/hw7_q3_e/src/rtw_proj.tmw
 p7/ghanbari/hw7_q3_e/src/tmwinternal/simulink_cache.xml
 p7/ghanbari/hw7_q3_e/src/wrapper.mk
+p8/ghanbari/hw08.pdf
+p8/ghanbari/hw8_q3_a_CoverageDetails/docked__cov__report__hw8_q3_a__Normal.html
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/aqua.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/black.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/blue.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/codecovreport.css
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/codecovreport_utils.js
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/covreport_utils.js
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/dkgrn.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/filter_add.png
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/filter_remove.png
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn01.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn02.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn03.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn04.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn05.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn06.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn07.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn08.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/grn09.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/horz_line.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/htmlfile.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/left_arrow.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/ltBlu.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/ltblue.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/ltgrn.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/modelcovreport.css
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/pink.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/purple.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/red.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/right_arrow.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/trans.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/version110.txt
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/vert_line.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/white.gif
+p8/ghanbari/hw8_q3_a_CoverageDetails/scv_images/yellow.gif
+p8/ghanbari/hw8_q3_a_Matlab/hw8_q3_a.slx
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/docked__cov__report__hw8_q3_a__Normal.html
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/aqua.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/black.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/blue.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/codecovreport.css
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/codecovreport_utils.js
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/covreport_utils.js
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/dkgrn.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/filter_add.png
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/filter_remove.png
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn01.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn02.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn03.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn04.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn05.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn06.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn07.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn08.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/grn09.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/horz_line.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/htmlfile.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/left_arrow.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/ltBlu.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/ltblue.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/ltgrn.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/modelcovreport.css
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/pink.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/purple.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/red.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/right_arrow.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/trans.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/version110.txt
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/vert_line.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/white.gif
+p8/ghanbari/hw8_q3_a_Matlab/slcov_output/CoverageDetails/scv_images/yellow.gif
+p8/ghanbari/hw8_q3_a_Matlab/slprj/_jitprj/sOIII5hQNEVSaf4lSpTTuwE.l
+p8/ghanbari/hw8_q3_a_Matlab/slprj/_jitprj/sOIII5hQNEVSaf4lSpTTuwE.mat
+p8/ghanbari/hw8_q3_a_Matlab/slprj/_sfprj/EMLReport/sOIII5hQNEVSaf4lSpTTuwE.mat
+p8/ghanbari/hw8_q3_a_Matlab/slprj/_sfprj/hw8_q3_a/_self/sfun/info/binfo.mat
+p8/ghanbari/hw8_q3_a_Matlab/slprj/_sfprj/hw8_q3_a/amsi_serial.mat
+p8/ghanbari/hw8_q3_a_Matlab/slprj/_sfprj/precompile/XRIT7A3iRE1QR4j6J17MEC.mat
+p8/ghanbari/hw8_q3_a_Matlab/t1.mldatx
+p8/ghanbari/hw8_q3_a_Matlab/t2.mldatx
+p8/ghanbari/hw8_q3_a_Shots/img0.jpg
+p8/ghanbari/hw8_q3_a_Shots/img1.jpg
+p8/ghanbari/hw8_q3_a_Shots/img2.jpg
+p8/ghanbari/hw8_q3_a_Shots/img3.jpg
+p8/ghanbari/hw8_q3_a_Shots/img4.jpg
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b.slx
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b.slxc
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/build_exception.mat
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/buildInfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/codedescriptor.dmr
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/codeInfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/codertarget_assembly_flags.mk
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/compileInfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/defines.txt
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/ert_main.c
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/arduinoAVRScheduler_cpp.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/css/coder_app.css
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/define.js
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/ert_main_c.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hilite_warning.png
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_c.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_codegen_rpt.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_coderassumptions.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_contents.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_h.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_interface.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_metrics.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_private_h.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_replacements.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_subsystems.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_survey.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_trace.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/hw8_q3_b_types_h.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/inspect.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/io_wrappers_cpp.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/js/coder_app.js
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/MW_ArduinoHWInit_cpp.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/MW_target_hardware_resources_h.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/nav.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/navToolbar.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtmodel_h.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtwhilite.js
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtwmsg.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtwreport.css
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtwreport_utils.js
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtwshrink.js
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/rtwtypes_h.html
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/search.js
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/html/spinner.gif
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/hw8_q3_b.bat
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/hw8_q3_b.c
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/hw8_q3_b.h
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/hw8_q3_b.mk
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/hw8_q3_b_private.h
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/hw8_q3_b_types.h
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/modelsources.txt
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/MW_target_hardware_resources.h
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/rtmodel.h
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/rtw_proj.tmw
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/rtwtypes.h
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/rtwtypeschksum.mat
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/tmwinternal/simulink_cache.xml
+p8/ghanbari/hw8_q3_b_Matlab/hw8_q3_b_ert_rtw/wrapper.mk
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_jitprj/jitEngineAccessInfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_jitprj/sjjrOxMsOEvU7aTrh8OgYGC.l
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_jitprj/sjjrOxMsOEvU7aTrh8OgYGC.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_jitprj/sn2K5kHqEc58NGX7Yuq3VZD.l
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_jitprj/sn2K5kHqEc58NGX7Yuq3VZD.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/EMLReport/emlReportAccessInfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/EMLReport/sjjrOxMsOEvU7aTrh8OgYGC.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/EMLReport/sn2K5kHqEc58NGX7Yuq3VZD.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/EMLReport/vBIkFqf7cAX2O6b1hEhMCH.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/_self/rtw/ert/info/binfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/_self/rtw/ert/src/c3_hw8_q3_b.tlc
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/_self/rtw/ert/src/c3_hw8_q3_b.tlh
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/_self/rtw/ert/src/hw8_q3_b_rtw.tlc
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/_self/rtw/ert/src/hw8_q3_b_rtw.tlh
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/_self/sfun/info/binfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/hw8_q3_b/amsi_serial.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/precompile/autoInferAccessInfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/_sfprj/precompile/R7LCwgfnhp94JfHS4btQBB.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/ert/_sharedutils/shared_file.dmr
+p8/ghanbari/hw8_q3_b_Matlab/slprj/ert/hw8_q3_b/tmwinternal/binfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/ert/hw8_q3_b/tmwinternal/CompileInfo.xml
+p8/ghanbari/hw8_q3_b_Matlab/slprj/ert/hw8_q3_b/tmwinternal/minfo.mat
+p8/ghanbari/hw8_q3_b_Matlab/slprj/ert/hw8_q3_b/tmwinternal/scv
+p8/ghanbari/hw8_q3_b_Matlab/slprj/ert/hw8_q3_b/tmwinternal/tr
+p8/ghanbari/hw8_q3_b_Matlab/slprj/sl_proj.tmw
+p8/ghanbari/hw8_q3_b_Shots/img1.jpg
+p8/ghanbari/hw8_q3_b_Shots/img2.jpg
+p8/ghanbari/hw8_q3_b_Shots/img3.jpg
+p8/ghanbari/hw8_q3_b_Shots/img4.jpg
+p8/ghanbari/hw8_q3_b_Shots/img5.jpg
+p8/ghanbari/hw8_q3_b_Shots/img6.jpg
+p8/ghanbari/hw8_q3_b_UnitTesting/sketch_dec28a.pdsprj
+p8/ghanbari/hw8_q3_b_UnitTesting/sketch_dec28a/sketch_dec28a.ino
+p8/ghanbari/hw8_q3_b_UnitTesting/sketch_dec28a/sketch_dec28a.ino.standard.hex
+p8/ghanbari/hw8_q3_b_UnitTesting/sketch_dec28a/sketch_dec28a.ino.with_bootloader.standard.hex
