--- a/p8/p82_UnitTest/platformio.ini
+++ b/p8/p82_UnitTest/platformio.ini
@@ -20,6 +20,4 @@ test_ignore = test_desktop
 [env:native]
 platform = native
 test_ignore = test_embedded
-lib_deps = 
-	painlessmesh/arduinoUnity@^0.0.2
-	bblanchon/ArduinoJson@^6.18.5
+lib_deps = painlessmesh/arduinoUnity@^0.0.2
